[gd_scene load_steps=8 format=3 uid="uid://cn682ynrwwf0s"]

[ext_resource type="Script" path="res://Menu.gd" id="1_74u02"]
[ext_resource type="Texture2D" uid="uid://fi1r0o82vx0c" path="res://spritesheets/Menu/background.jpg" id="2_b4uvq"]
[ext_resource type="Texture2D" uid="uid://rrrxx3yr0xvr" path="res://spritesheets/Menu/a3e60a11264c599e3babb8d704e785eb.png" id="3_ulbmy"]
[ext_resource type="PackedScene" uid="uid://bg0meqfjf3326" path="res://mario_animated_sprite.tscn" id="4_kp5nv"]
[ext_resource type="Texture2D" uid="uid://cf6exqj8chug4" path="res://spritesheets/Menu/a582f0456636f7b40b4eb3e8ccee4b51.png" id="5_p4u3h"]
[ext_resource type="Texture2D" uid="uid://bqffeqbuodtdx" path="res://spritesheets/Menu/12ffee0a6b69e6075b0608df4a154f18.png" id="6_y2lad"]
[ext_resource type="AudioStream" uid="uid://dxdd1iyt6ugxk" path="res://musica/FatMarioWalkin.mp3" id="7_xwmh5"]

[node name="Menu" type="Node"]
script = ExtResource("1_74u02")

[node name="Background_Title" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="TextureRect" parent="Background_Title"]
modulate = Color(1, 1, 1, 0.709804)
self_modulate = Color(1, 1, 1, 0.831373)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_b4uvq")

[node name="Title" type="TextureRect" parent="Background_Title"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -367.5
offset_right = 367.5
offset_bottom = 181.0
grow_horizontal = 2
texture = ExtResource("3_ulbmy")

[node name="MarioAnimatedSprite" parent="." instance=ExtResource("4_kp5nv")]
position = Vector2(580, 352)
scale = Vector2(71.6563, 14.5312)

[node name="Buttons" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Play" type="TextureButton" parent="Buttons"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 465.0
offset_top = 357.0
offset_right = 635.0
offset_bottom = 409.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("5_p4u3h")

[node name="Exit" type="TextureButton" parent="Buttons"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 472.0
offset_top = 434.0
offset_right = 632.0
offset_bottom = 485.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("6_y2lad")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2(575, 328.5)
scale = Vector2(72, 20.0312)
stream = ExtResource("7_xwmh5")
autoplay = true

[connection signal="pressed" from="Buttons/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Buttons/Exit" to="." method="_on_exit_pressed"]
